--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,18 @@
     <version>3.0-alpha-1</version>
     </dependency>
     
+    <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-orm</artifactId>
+    <version>5.0.0.RELEASE</version>
+    </dependency>
+    
+    <dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.0.0.FINAL</version>
+    </dependency>
+    
   </dependencies>
   <build>
     <finalName>spwebmvc</finalName>
